[package]
name = "port-service"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
axum = { version = "0.6.18" }
hyper = { version = "0.14", features = ["full"] }
tower-http = { version = "0.4.0", features = ["cors"] }
mime = "0.3"

[dev-dependencies]
tower = { version = "0.4", features = ["util"] }

[profile.release]
strip = true  # Automatically strip symbols from the binary.
opt-level = "z"  # Optimize for size.
lto = true
codegen-units = 1
panic = "abort"
debug = false
